--- a/index.html
+++ b/index.html
@@ -40,3 +40,14 @@ description: "Always Coding..."
     {% endif %}
 </ul>
 {% endif %}
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125647784-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125647784-1');
+</script>
+
